--- a/cj.netos.jpush.terminal.node/build.gradle
+++ b/cj.netos.jpush.terminal.node/build.gradle
@@ -19,13 +19,15 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.4.0'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.25'
     compile group: 'cj.studio.gateway2', name: 'cj.studio.ecm.net', version: ref_cj_studio_ecm_net_version
+    compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.9.0'
     compile project (':cj.netos.jpush.corelib')
 }
 task copyReferences(type: Copy) {
     from configurations.compileClasspath.files {
-        include 'snakeyaml-*.jar','cj.studio.ecm.net-*.jar'
+        include 'snakeyaml-*.jar','cj.studio.ecm.net-*.jar','okhttp-*.jar','okio-*.jar','kotlin-*.jar','amqp-client-*.jar'
     }
     into 'src/cj/references'
 }
