--- a/cj.netos.jpush.test/src/cj/properties/Assembly.properties
+++ b/cj.netos.jpush.test/src/cj/properties/Assembly.properties
@@ -6,7 +6,7 @@ appKey=995C2A861BE8064A1F8A022B5C0D2E36
 appSecret=6EA4774EE78DCDF0768CA18ECF3AD1DB
 site.session.forbidden=true
 site.session.expire=30000
-site.document=.html|.htm|.service|.app
+site.document=.html|.htm|.service|.app|.ports
 #Default Web resources when the requested path ends in / and is not handled by document interception.
 site.http.welcome=/index.html
 site.http.error.default=/error/error-default.html
