--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,4 @@ include 'cj.netos.jpush.terminal.start'
 include 'cj.netos.jpush.device'
 
 include 'cj.netos.jpush.pusher'
-include 'cj.netos.jpush.test'
+include 'cj.netos.jpush.website'
