--- a/cmdtools/terminal/conf/node.yaml
+++ b/cmdtools/terminal/conf/node.yaml
@@ -13,13 +13,22 @@ server:
     heartbeat: 10
     #检测到心跳包最大掉包次数，超过此数则主动关闭远程客户端，如果为0表示不会主动关闭
     overtimes: 10
+#注册中心，为app提供发现可用终结点列表的能力，依赖于zookeeper,curator
+asc:
+  namespace: jpush
+  #本终端挂载的节点，不能重复
+  mountPath: /terminal-1
+  # 生产：172.31.210.92:2181,172.31.210.92:2182,172.31.210.92:2183  开发环境：47.104.128.137:2181,47.104.128.137:2182,47.104.128.137:2183
+  connectString: 47.104.128.137:2181,47.104.128.137:2182,47.104.128.137:2183
+  sessionTimeoutMs: 500000
+  connectionTimeoutMs: 500000
+  retryIntervalMs: 5000
 restFull:
   appid: system.netos
   appKey: 995C2A861BE8064A1F8A022B5C0D2E36
   appSecret: 6EA4774EE78DCDF0768CA18ECF3AD1DB
   ports:
     uc.auth: http://47.105.165.186/uc/auth.service
-    uc.platform: http://47.105.165.186/uc/platform/self.service
   okhttp:
     readTimeout: 5000
     writeTimeout: 5000
