--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ ref_cj_ultimate_version=2.3.8
 ref_cj_studio_ecm_corelib_version=2.3.8
 ref_cj_studio_ecm_net_version=2.4.2
 ref_cj_studio_openport_version=1.1.9
+ref_cj_studio_orm_curator=2.4.3
