--- a/cj.netos.jpush.website/src/cj/properties/Assembly.properties
+++ b/cj.netos.jpush.website/src/cj/properties/Assembly.properties
@@ -1,7 +1,12 @@
-#http://172.31.210.93:9090/uc/auth.service
+#http://172.31.210.93/uc/auth.service
 #http://47.105.165.186/uc/auth.service
-ports.auth=http://47.105.165.186/uc/auth.service
-ports.person=http://47.105.165.186/uc/person/self.service
+#测试环境
+#ports.auth=http://47.105.165.186/uc/auth.service
+#ports.person=http://47.105.165.186/uc/person/self.service
+#生产环境
+ports.auth=http://172.31.210.93/uc/auth.service
+ports.person=http://172.31.210.93/uc/person/self.service
+
 appid=system.netos
 appKey=995C2A861BE8064A1F8A022B5C0D2E36
 appSecret=6EA4774EE78DCDF0768CA18ECF3AD1DB
