--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ ref_cj_studio_ecm_net_version=2.4.6
 ref_cj_studio_openport_version=1.2.0
 ref_cj_studio_orm_curator=2.4.6
 ref_cj_studio_orm_mongodb=2.4.6
+ref_cj_studio_orm_redis=2.4.5
