--- a/cmdtools/terminal/plugin/properties/Assembly.properties
+++ b/cmdtools/terminal/plugin/properties/Assembly.properties
@@ -9,7 +9,7 @@ buddy.pusher.huawei.appid=103180143
 buddy.pusher.ios.cert=/cert/microgeo.p12
 buddy.pusher.ios.pwd=jofers0408
 #环境，这个非常重要，如果是发布版且上了应用市场就要用生产环境(product)，否则为开发环境(develop)
-buddy.pusher.ios.env=develop
+buddy.pusher.ios.env=product
 
 #地址['host:port','host:port']
 #redis.cluster.addresses=['47.105.165.186:7001','47.105.165.186:7002','47.105.165.186:7003','47.105.165.186:7004','47.105.165.186:7005','47.105.165.186:7006']
